Bug 926036 - Extend the label bindings to assign to textContent to get normal line-wrapping when attached. r=mbrubeck
UltraBlame original commit: a9cede6f40c849fe7db325703b2278133252c773

--- a/browser/metro/base/content/browser.css
+++ b/browser/metro/base/content/browser.css
@@ -237,6 +237,91 @@ cssthrobberBinding
 )
 ;
 }
+label
+[
+linewrap
+]
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+bindings
+/
+bindings
+.
+xml
+#
+line
+-
+wrap
+-
+label
+"
+)
+;
+}
+label
+[
+linewrap
+]
+.
+text
+-
+link
+label
+[
+onclick
+]
+[
+linewrap
+]
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+bindings
+/
+bindings
+.
+xml
+#
+line
+-
+wrap
+-
+text
+-
+link
+"
+)
+;
+}
 settings
 {
 -
